--- a/07. AdvancedLoops/05. Sequence2kPlus1/05. Sequence2kPlus1.csproj
+++ b/07. AdvancedLoops/05. Sequence2kPlus1/05. Sequence2kPlus1.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Sequence2kPlus1.cs" />
+    <Compile Include="StartUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
